Prevent KWallet being queried on every track change by last.fm

Just look up the scrobbleComposer value from config directly,
rather than creating a whole lastFmServiceConfig object just to get it
BUG:278177
FIXED-IN:2.4.3